fix: @Repeat third arg truncates result, not pads each repetition
Domino spec: @Repeat(string; count; maxChars) repeats string count times,
then truncates to maxChars. Example: @Repeat("Bye"; 2; 5) → "ByeBy" (not
"Bye  Bye  ").

Also added 1,024 character limit per Domino spec.

Fixed 2 test assertions that asserted the old wrong padding behavior.
579/579 tests pass.